--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,10 +51,6 @@
                 <div class="fill">
                   <div class="container">
                     <h1>Hello</h1>
-                    <h1>Hello</h1>
-                    <h1>Hello</h1>
-                    <h1>Hello</h1>
-                    <h1>Hello</h1>
                   </div>
                 </div>
             </div>
@@ -61,11 +58,7 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill">
                     <div class="container">
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
+
                     </div>
                 </div>
             </div>
@@ -73,11 +66,7 @@
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill">
                     <div class="container">
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
-                      <h1>Hello</h1>
+
                     </div>
                 </div>
             </div>
@@ -88,7 +77,7 @@
             <img class="icon-prev"src="./assets/back.png">
         </a>
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <img class="icon-next"src="./assets/next.png">
+            <img class="icon-next bounce"src="./assets/next.png">
         </a>
 
     </header>
@@ -98,7 +87,7 @@
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
-        interval: 5000 //changes the speed
+
     })
     </script>
 
