--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill">
                     <div class="container">
-
+                         <canvas id="doughnut" style="width: 400px; height: 400px;"></canvas>
+                         <canvas id="andyline" style="width: 400px; height: 400px;"></canvas>
                     </div>
                 </div>
             </div>
@@ -84,10 +85,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.0/Chart.bundle.js"></script>
+    <script src="./js/pie-chart.js"></script>
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
-
+        interval: false
     })
     </script>
 
