positioning updates - adding labels to the axis though at the moment they make no sense

--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill">
                     <div class="container">
-                         <canvas id="doughnut" style="width: 400px; height: 400px;"></canvas>
-                         <canvas id="andyline" style="width: 400px; height: 400px;"></canvas>
+                        <div class='row'>
+                            <div class='col-md-6'>
+                                <canvas id="doughnut" style="width:100%;"></canvas>
+                            </div>
+                            <div class='col-md-6'>
+                                <canvas id="andyline"></canvas>
+                            </div>  
+                        </div>
                     </div>
                 </div>
             </div>
