App streams / 2 parts.

--- a/intro.html
+++ b/intro.html
@@ -20,40 +20,66 @@
 </pre>
 
 
-    <code>
-      login: <span id="typing"></span><br>
-      <span id="step_2" hidden="hidden">passport:</span> <span id="typing_2"></span><br><br>
-      <span id="step_3" hidden="hidden">neo@govhack.nz$ <span id="typing_3" style="color: white;"></span><span id="curser" style="background: #bbb; color: black">?</span></span>
+    <code id="terminal">
+      login: <span class="autotype" id="typing"></span><br>
+      <span class="init_hidden" id="step_2" hidden="hidden">passport:</span>
+      <span class="autotype" id="typing_2"></span><br>
+      <span class="init_hidden" id="motd" hidden="hidden">Application Steam: <span id="app_stream"></span></span>
+      <br><br>
+      <span class="init_hidden" id="step_3" hidden="hidden">neo@govhack.nz$
+          <span class="autotype" id="typing_3" style="color: white;"></span><span id="curser" style="background: #bbb; color: black">?</span></span>
       <br>
-      <span id="whois_output"></span>
+      <span class="autotype" id="whois_output"></span>
     </code>
     <script>
-    var write_whois = function() {
+    var write_whois = function(result, callback) {
       $("#whois_output").ghosttypeonce({
-        message: "version: 1986<br>domain_name: welcometo.nz<br>query_status: <span style=\"color: red\">402 Payment Required</span><br>",
-        timePause: 4000,
+        message: "version: 1986<br>domain_name: welcometo.nz<br>query_status: " + result  + "<br>",
+        timePause: 3000,
         timeWrite: 20,
-        callback: function(){window.location.href = "/"}
+        callback: callback
       })
     }
-    setTimeout(function() {
-        $("#typing").ghosttypeonce({
-          message: 'refugee',
-          callback: function() {
-            $("#step_2").show(0, function() {
-            $("#typing_2").ghosttypeonce({
-              message: 'Syrian',
+    var login = function(name, passport, app_stream, callback) {
+        setTimeout(function() {
+            $("#typing").ghosttypeonce({
+              message: name,
               callback: function() {
-                $("#step_3").show(0, function() {
-                    setTimeout(function() {
-                      $("#typing_3").ghosttypeonce({
-                        message: "whois welcometo.nz",
-                        timePause: 1500,
-                        callback: function() {$("#curser").hide(0, write_whois())}});
-                    }, 300);});
-                }
-              })})}});
-          }, 1000);
+                $("#step_2").show(0, function() {
+                $("#typing_2").ghosttypeonce({
+                  message: passport,
+                  callback: function() {
+                    $('#app_stream').text(app_stream);
+                    setTimeout(
+                        function (){
+                        $('#motd').show()
+                        $("#step_3").show(0, function() {
+                            setTimeout(function() {
+                              $("#typing_3").ghosttypeonce({
+                                message: "whois welcometo.nz",
+                                timePause: 1500,
+                                callback: callback}); // 
+                            }, 300);});}, 500
+                    )}
+                  })})}});
+              }, 1000);
+    }
+    login('refugee', 'Syrian', "International / Humanitarian", function() {$("#curser").hide(0, write_whois(
+        "<span style=\"color: red\">510 Not Extended</span>",
+        function (){
+            $('.init_hidden').hide();
+            $('.autotype').empty();
+            $('#curser').show();
+            login('skilled_migrant', 'Syrian', 'Business / Skilled', function (){
+                $('#curser').hide(0);
+                write_whois(
+                    "<span style=\"color: orange\">402 Payment Required</span>",
+                    function() {
+                        window.location.href = "/";
+                    }
+                )
+            });
+        }))});
     </script>
   </body>
 </html>
