spliting the graphs out into two separate thingalings

--- a/index.html
+++ b/index.html
@@ -58,18 +58,21 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-md-12">
+                        <div class="row" style="padding-bottom: 20px;">
+                            <div class="col-md-6">
                                 <h2>Example of a wee header for the world to see</h2>
                                 <p>Here you can see a lil wee comparision of a few graph, clicky click and see what can happpen</p>
+                            </div>
+                            <div class='col-md-6'>
+                                <canvas id="doughnut" style="width:100%;"></canvas>
                             </div>
                         </div>
                         <div class='row'>
                             <div class='col-md-6'>
-                                <canvas id="doughnut" style="width:100%;"></canvas>
+                                <canvas id="refugee-line"></canvas>
                             </div>
                             <div class='col-md-6'>
-                                <canvas id="andyline"></canvas>
+                                <canvas id="migrant-line"></canvas>
                             </div>  
                         </div>
                     </div>
