updating the message to be more clear, updating titles

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                     <div class="container">
                         <div class="row" style="padding-bottom: 20px;">
                             <div class="col-md-6">
-                                <h2>Example of a wee header for the world to see</h2>
-                                <p>Here you can see a lil wee comparision of a few graph, clicky click and see what can happpen</p>
+                                <h2>Accepted migrants and refugees</h2>
+                                <p>
+                                    Here you can see the amount of migrants and refugees accepted into New Zealand and Austraila normalized by population. <strong>Click on the segments of the pie chart</strong> to see how New Zealand and Austraila compare.
+                                </p>
                             </div>
                             <div class='col-md-6'>
                                 <canvas id="doughnut" style="width:100%;"></canvas>
