spelling fix wooooops

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="col-md-6">
                                 <h2>Accepted migrants and refugees</h2>
                                 <p>
-                                    Here you can see the amount of migrants and refugees accepted into New Zealand and Austraila normalized by population. <strong>Click on the segments of the pie chart</strong> to see how New Zealand and Austraila compare.
+                                    Here you can see the amount of migrants and refugees accepted into New Zealand and Australia normalized by population. <strong>Click on the segments of the pie chart</strong> to see how New Zealand and Australia compare.
                                 </p>
                             </div>
                             <div class='col-md-6'>
