--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                             </div>
                         </div>
                         <div class='row'>
+                            <h2 id="results-header">New Zealand results</h2>
                             <div class='col-md-6'>
                                 <canvas id="refugee-line"></canvas>
                             </div>
