--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
                     <div class="container">
                         <div class="row" style="padding-bottom: 20px;">
                             <div class="col-md-6">
+                            <div class="section-description">
                                 <h2>Accepted migrants and refugees</h2>
                                 <p>
-                                    Here you can see the amount of migrants and refugees accepted into New Zealand and Australia normalized by population. <strong>Click on the segments of the pie chart</strong> to see how New Zealand and Australia compare.
+                                    Here you can see the amount of migrants and refugees accepted into New Zealand and Australia normalized by population.
+                                    <br><br>
+                                    <strong>Click on the segments of the pie chart</strong> to see how New Zealand and Australia compare.
                                 </p>
+                            </div>
                             </div>
                             <div class='col-md-6'>
                                 <canvas id="doughnut" style="width:100%;"></canvas>
@@ -87,7 +91,7 @@
                             </div>
                             <div class='col-md-6'>
                                 <canvas id="migrant-line"></canvas>
-                            </div>  
+                            </div>
                         </div>
                     </div>
                 </div>
