--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:900' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,9 +30,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-
-        </div>
+        <h1 class='nav-text'>Welcome To NZ &#9829;</h1>
         <!-- /.container -->
     </nav>
 
@@ -46,7 +45,21 @@
 
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
-            <div class="item active" id="stackup-watcher">
+            <div class="item active">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill">
+                    <div class="container">
+                        <div class="col-lg-12">
+                            <div class="home-text">
+                                <img src="./assets/globe.png">
+                                <h1>Hey! welcome to our interactive website. <br><br>We hope you enjoy, and find some useful insights surrounding New Zealand's reaction to migration.</h1>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="item" id="stackup-watcher">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill">
                   <div class="container">
