add home page text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                         <div class="col-lg-12">
                             <div class="home-text">
                                 <img src="./assets/globe.png">
-                                <h1>Hey! welcome to our interactive website. <br><br>We hope you enjoy, and find some useful insights surrounding New Zealand's reaction to migration.</h1>
+                                <h1>Who is Welcome to NZ?<br><br>Let's play our part in the world and welcome more refugees.</h1>
+                                <h4>Click the arrow on the right to see insights</h4>
                             </div>
                         </div>
 
