--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="container">
                         <div class="col-lg-12">
                           <div class="section-info">
-                              <h1>What big is the difference?</h1>
+                              <h1>How big is the difference?</h1>
                               <p>Below are the comparison of New Zealand's migrant, and refugee intake. The disparity between the number of migrants which are identified as refugees shows New Zealand's willingness to only support those that bring immediate economic impact.</p>
                           </div>
                         </div>
