--- a/whois.html
+++ b/whois.html
@@ -24,7 +24,7 @@
       login: <span class="autotype" id="typing"></span><br>
       <span class="init_hidden" id="step_2" hidden="hidden">passport:</span>
       <span class="autotype" id="typing_2"></span><br>
-      <span class="init_hidden" id="motd" hidden="hidden">Application Steam: <span id="app_stream"></span></span>
+      <span class="init_hidden" id="motd" hidden="hidden">Application Stream: <span id="app_stream"></span></span>
       <br><br>
       <span class="init_hidden" id="step_3" hidden="hidden">neo@govhack.nz$
           <span class="autotype" id="typing_3" style="color: white;"></span><span id="curser" style="background: #bbb; color: black">?</span></span>
