Add link to project page.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <img src="./assets/globe.png">
                                 <h1>Who is Welcome to NZ?<br><br>Let's play our part in the world and welcome more refugees.</h1>
                                 <h4>Click the arrow on the right to see insights</h4>
-                                <p class="made-by-text">Made with &#9829; by <a href="#">HelloWorld</a></p>
+                                <p class="made-by-text">Made with &#9829; by <a href="http://2016.hackerspace.govhack.org/content/welcometonz">HelloWorld</a></p>
                             </div>
                         </div>
 
